# social_network_back

./: .env  .gitignore  Dockerfile  compose.yml  db.sqlite3-shm  db.sqlite3-wal  main.py  pyproject.toml
src/: settings.py
src/api/: auth.py  main.py
src/api/routes/: posts.py  users.py
src/api/schemas/: posts.py  user.py
src/api/services/: posts.py  user.py
src/datalayer/: set_db.py
src/datalayer/models/: posts.py  user.py
tests/: test_comment.py  test_like.py  test_login.py  test_post.py
